try to fix height calculations on mobile when full screen

--- a/src/index.css
+++ b/src/index.css
@@ -86,8 +86,14 @@ body {
   }
 
   scrollbar-width: none;
-
   -ms-overflow-style: none;
+  overscroll-behavior: none;
+  overflow-y: auto;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: fixed;
 }
 html::-webkit-scrollbar,
 body::-webkit-scrollbar {
